# peket

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
changelog/: index.html
docs/: changelog.md  index.md  installation.md  tutorials.md
docs/tools/: gw-search-significance.md  gw-setup-pipeline.md  kn-make-grid.md  kn-ts-loop.md
example_file/injection/: example_injection.yaml
example_file/real_KN/: example_170817config.yaml
installation/: index.html
search/: search_index.json
site/: 404.html  index.html
site/changelog/: index.html
site/installation/: index.html
site/search/: search_index.json
site/tutorials/: index.html
test_injection/: inj_injection_time.txt  inj_tmplt.hdf  inj_windows.txt
test_injection/inj_split/: split_bank_0.hdf  split_bank_1.hdf  split_bank_2.hdf  split_bank_3.hdf  split_bank_4.hdf  split_bank_5.hdf  split_bank_6.hdf  split_bank_7.hdf  split_bank_8.hdf  split_bank_9.hdf
test_injection/logs/: inj_search_0_1262206057.err  inj_search_0_1262209641.err  inj_search_0_1262213225.err  inj_search_0_1262216809.err  inj_search_0_1262220393.err  inj_search_0_1262223977.err  inj_search_0_1262227561.err  inj_search_0_1262231145.err  inj_search_0_1262234729.err  inj_search_0_1262238313.err  inj_search_0_1262241897.err  inj_search_0_1262245481.err  inj_search_0_1262249065.err  inj_search_0_1262252649.err  inj_search_0_1262256233.err  inj_search_0_1262259817.err  inj_search_1_1262206057.err  (+145 more)
test_real_data/: test_run_tmplt.hdf  test_run_windows.txt
tutorials/: index.html
(+121 files in other folders)
